# keeb-wind-nav

./: .gitignore  CLAUDE.md  README.md  RESIZE_PLAN.md  RESUME.md  TODO.md
.claude/agents/: planner.md  reviewer.md
installer/: winhint.iss
prototype/: requirements.txt  winhint.py
winhint/: Cargo.toml
winhint/src/: app.rs  click.rs  hints.rs  hotkey.rs  main.rs  overlay.rs  resize.rs  scanner.rs  splitter.rs  tray.rs
